--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* html {
   font-family: Arial, Helvetica, sans-serif;
 } */
-
 header {
   width: 100%;
   height: 96px;
@@ -34,7 +33,48 @@ main {
   margin: auto;
   padding: 30px 0;
 }
+body, html {
+height: 100%;
+}
+.hero-image {
+  background-image: url("../img/list-bg.png");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 960px;
+  position: relative;  
+}
 
-/* h1 {
-  font-size: 18pt;
-} */
+/* Places text in the middle of the image */
+.hero-text {
+  text-align: left;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:black;
+  font-size: 20px;
+  font-family: 'Cinzel', serif;
+}
+.column1of2 {
+  list-style-type: square;
+  font-family: cursive;
+  font-family: 'Patrick Hand', cursive;
+  float:left;
+  margin-right: 45px;
+}
+
+.column2of2 {
+  list-style-type: square;
+  font-family: cursive;
+  font-family: 'Patrick Hand', cursive;
+  float:left;
+}
+
+button {
+  color: white;
+  background-color:rgb(209	117	80);
+  font-weight:lighter;
+  height: 40px;
+  width: 125px;
+}
