--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,91 @@
-/* html {
-  font-family: Arial, Helvetica, sans-serif;
-} */
-header {
-  width: 100%;
-  height: 96px;
-  padding: 13px;
-  box-sizing: border-box;
+body{
+  margin: 160px;
 }
-
-header div {
-  width: 960px;
-  margin: auto;
+header {
+  height: 100px;
+  padding: 13px;
+  /* box-sizing: border-box; */
 }
 
 .headerFont {
-  margin: auto;
+  /* margin: auto; */
   display: inline-block;
   font-family: 'Yellowtail', cursive;
   font-size: 40px;
 }
 
+h1{
+font-size: 30px;
+font-family: sans-serif;
+font-weight: bold;
+}
 .annoyingFont {
-  width: 960px;
-  margin: auto;
+  /* width: 960px;
+  margin: auto; */
   font-family: sans-serif;
   font-size: 10px;
-  font-weight: 
+ color: rgb(153, 153, 153);
 }
 
-main {
+#postDate{
+  font-family: sans-serif;
+  color: rgb(153, 153, 153);
+  font-size: 10px; 
+}
+
+hr {
+  display: block;
+  height: 15px;
+  border: 10;
+  background-color: rgb(204, 204, 204);
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  margin-bottom: 30px;
+  padding: 0;
+  
+}
+
+/* main {
   width: 960px;
   margin: auto;
   padding: 30px 0;
-}
+} */
+
 body, html {
 height: 100%;
+width: 960px;
 }
+
+#chocoPizza {
+  width: 960px;
+}
+
 .hero-image {
   background-image: url("../img/list-bg.png");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 960px;
-  position: relative;  
+  position: relative;
+  max-width: 960;  
 }
 
-/* Places text in the middle of the image */
+#p1{
+  margin-bottom: 30px;
+  color: rgb(153, 153, 153);
+
+}
+
+#p2{
+  margin-bottom: 30px;
+  color: rgb(153, 153, 153);
+}
+
+#p3{
+  color: rgb(153, 153, 153);
+}
+
+
 .hero-text {
   text-align: left;
   position: absolute;
@@ -56,12 +96,15 @@ height: 100%;
   font-size: 20px;
   font-family: 'Cinzel', serif;
 }
+
 .column1of2 {
   list-style-type: square;
   font-family: cursive;
   font-family: 'Patrick Hand', cursive;
   float:left;
   margin-right: 45px;
+  list-style-image: url('../img/emptyCheckbox.png');
+  opacity: .6;
 }
 
 .column2of2 {
@@ -69,6 +112,14 @@ height: 100%;
   font-family: cursive;
   font-family: 'Patrick Hand', cursive;
   float:left;
+  list-style-image: url('../img/emptyCheckbox.png');
+  opacity: .6;
+}
+
+.strike {
+  list-style-image: url('../img/checkbox.png');
+}
+#p4{color: rgb(153, 153, 153);
 }
 
 button {
@@ -77,4 +128,15 @@ button {
   font-weight:lighter;
   height: 40px;
   width: 125px;
+}
+
+#shareButton {
+  width:auto;
+  float:right;
+}
+
+#footerText{
+  color:rgb(204, 204, 204);
+  font-size: 10px;
+  text-align: center;
 }
