--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,58 @@ body{
 header {
   height: 100px;
   padding: 13px;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
+}
+nav {
+  float: right;
 }
 
+nav li {
+  display: inline;
+  padding: 1px 0;
+  margin-right: 1px;
+  font-size: 18px;
+}
+
+header div {
+  float: left;
+  width: 240px;
+  margin: auto;
+}
 .headerFont {
-  /* margin: auto; */
   display: inline-block;
+  position: relative;
   font-family: 'Yellowtail', cursive;
   font-size: 40px;
+  top: -16px;
+}
+
+.annoyingFont {
+  font-family: sans-serif;
+  font-size: 10px;
+  position: relative;
+  top: -16px;
+  left: 50px;
+}
+
+nav li {
+  display: inline-block;
+  padding: 40px 0;
+  font-size: 18px;
+}
+
+#rightIcons {
+  position: relative;
+  left: 5px;
+}
+#print{
+  color:rgb(204, 204, 204);
+  font-size: 10px;
+  float: right;
+}
+#printer{
+  float: right;
+  margin-bottom: 15px;
 }
 
 h1{
@@ -19,13 +63,11 @@ font-size: 30px;
 font-family: sans-serif;
 font-weight: bold;
 }
-.annoyingFont {
-  /* width: 960px;
-  margin: auto; */
+/* .annoyingFont {
   font-family: sans-serif;
   font-size: 10px;
  color: rgb(153, 153, 153);
-}
+} */
 
 #postDate{
   font-family: sans-serif;
@@ -40,16 +82,10 @@ hr {
   background-color: rgb(204, 204, 204);
   border-top: 1px solid #ccc;
   margin: 1em 0;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   padding: 0;
   
 }
-
-/* main {
-  width: 960px;
-  margin: auto;
-  padding: 30px 0;
-} */
 
 body, html {
 height: 100%;
@@ -73,16 +109,20 @@ width: 960px;
 #p1{
   margin-bottom: 30px;
   color: rgb(153, 153, 153);
-
+  font-size: 16px;
 }
 
 #p2{
   margin-bottom: 30px;
   color: rgb(153, 153, 153);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 16px;
 }
 
 #p3{
   color: rgb(153, 153, 153);
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 
@@ -121,7 +161,9 @@ width: 960px;
 }
 #p4{color: rgb(153, 153, 153);
 }
-
+#vanessa {
+  float: left;
+}
 button {
   color: white;
   background-color:rgb(209	117	80);
@@ -134,7 +176,9 @@ button {
   width:auto;
   float:right;
 }
-
+#footerlogo{
+float: center;
+}
 #footerText{
   color:rgb(204, 204, 204);
   font-size: 10px;
