--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,49 @@
-/* html {
-  font-family: Arial, Helvetica, sans-serif;
-} */
 header {
   width: 100%;
   height: 96px;
-  padding: 13px;
+  padding: 1px;
   box-sizing: border-box;
 }
 
 header div {
-  width: 960px;
-  margin: auto;
+  float: left;
+  width: 240px;
+  margin-top: 30px;
 }
 
 .headerFont {
-  margin: auto;
   display: inline-block;
+  position: relative;
   font-family: 'Yellowtail', cursive;
   font-size: 40px;
+  top: -16px;
 }
 
 .annoyingFont {
-  width: 960px;
-  margin: auto;
   font-family: sans-serif;
   font-size: 10px;
-  font-weight: 
+  position: relative;
+  top: -16px;
+  left: 50px;
+}
+/* 
+#divHeader {
+  border: 5px solid blue;
+} */
+
+nav {
+  float: right;
+}
+
+nav li {
+  display: inline-block;
+  padding: 40px 0;
+  font-size: 18px;
+}
+
+#rightIcons {
+  position: relative;
+  left: 5px;
 }
 
 main {
@@ -33,9 +51,17 @@ main {
   margin: auto;
   padding: 30px 0;
 }
+
 body, html {
 height: 100%;
+width: 960px;
+margin: auto;
 }
+
+#chocoPizza {
+  width: 960px;
+}
+
 .hero-image {
   background-image: url("../img/list-bg.png");
   height: 50%;
@@ -62,6 +88,7 @@ height: 100%;
   font-family: 'Patrick Hand', cursive;
   float:left;
   margin-right: 45px;
+  list-style-image: url('../img/emptyCheckbox.png');
 }
 
 .column2of2 {
@@ -69,6 +96,11 @@ height: 100%;
   font-family: cursive;
   font-family: 'Patrick Hand', cursive;
   float:left;
+  list-style-image: url('../img/emptyCheckbox.png');
+}
+
+.strike {
+  list-style-image: url('../img/checkbox.png');
 }
 
 button {
@@ -77,4 +109,13 @@ button {
   font-weight:lighter;
   height: 40px;
   width: 125px;
+}
+
+hr {
+    display: block;
+    height: 20px;
+    border: 10;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
