--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,28 @@
-body{
-  margin: 160px;
+body {
+  margin-left: 480px;
+  margin-top: 30px;
 }
+
 header {
   height: 100px;
   padding: 13px;
   box-sizing: border-box;
 }
+
 nav {
   float: right;
 }
 
 nav li {
   display: inline;
-  padding: 1px 0;
-  margin-right: 1px;
-  font-size: 18px;
+  position: relative;
+  margin: -1px;
+  top: 10px;
+}
+
+#rightIcons {
+  position: relative;
+  left: 10px;
 }
 
 header div {
@@ -22,6 +30,7 @@ header div {
   width: 240px;
   margin: auto;
 }
+
 .headerFont {
   display: inline-block;
   position: relative;
@@ -38,16 +47,6 @@ header div {
   left: 50px;
 }
 
-nav li {
-  display: inline-block;
-  padding: 40px 0;
-  font-size: 18px;
-}
-
-#rightIcons {
-  position: relative;
-  left: 5px;
-}
 #print{
   color:rgb(204, 204, 204);
   font-size: 10px;
@@ -63,11 +62,6 @@ font-size: 30px;
 font-family: sans-serif;
 font-weight: bold;
 }
-/* .annoyingFont {
-  font-family: sans-serif;
-  font-size: 10px;
- color: rgb(153, 153, 153);
-} */
 
 #postDate{
   font-family: sans-serif;
@@ -103,7 +97,7 @@ width: 960px;
   background-repeat: no-repeat;
   background-size: 960px;
   position: relative;
-  max-width: 960;  
+  max-width: 960;
 }
 
 #p1{
@@ -122,7 +116,6 @@ width: 960px;
 #p3{
   color: rgb(153, 153, 153);
   font-size: 16px;
-  margin-bottom: 20px;
 }
 
 
